--- a/Thesis/thesis-method.tex
+++ b/Thesis/thesis-method.tex
@@ -55,7 +55,7 @@ As discussed in Chapter 3, the haptic was designed with two operating modes in m
 \subsection{Audio File Generation}
 All tracks were rendered using the digital audio workstation (DAW) \textit{Logic Pro X} as \textit{.wav} files at a 44.1kHz sample rate with 16 bit resolution.
 \subsubsection{Metronomic click and legato chime}
-\begin{wrapfigure}[8]{r}{5cm}
+\begin{wrapfigure}{r}{5cm}
     \centering
     \includegraphics[width=0.25\textwidth]{klopfgeist}
     \caption{Default metronome}
