--- a/Thesis/thesis-method.tex
+++ b/Thesis/thesis-method.tex
@@ -1,7 +1,7 @@
 \chapter{Method}
-This chapter outlines each test case, describes the motivation behind the test plan, and delves into both the hardware and software design required to implement the methodology. 
+This chapter outlines each test case, describes the motivation behind the test plan, and delves into both the hardware and software design required to implement the methodology. Furthermore, it defines and calculates a round-trip latency in the system to find an approximation of relative accuracy. The hope is to establish a level of confidence in the precise time dependent information.
 
-The overall test principle was derived from traditional sensorimotor synchronization tasks in which a user is asked to tap to a corresponding stimulus. The time delta between the tap onset and the stimulus onset is tracked and plotted for future analysis. Since the haptic domain is of primary focus, the auditory modality functions primarily as a benchmark or baseline foundation.  The work presented in \ref{visualMet} extensively covers the idea of the interstitial beat occupying the visual domain and as such will not be re-evaluated here.
+The overall test principle was derived from traditional sensorimotor synchronization tasks in which a user is asked to tap to a corresponding stimulus. The asynchrony was tracked and plotted along with the PCR and any missed taps. Since the haptic domain is of primary focus, the auditory modality functions primarily as a benchmark or baseline foundation. The work presented in \ref{visualMet} covers the idea of the interstitial beat occupying the visual domain and as such will not be re-evaluated here.
 
 \todo{Fill method intro in with more detail}
 
