--- a/Thesis/thesis-hapticDesign.tex
+++ b/Thesis/thesis-hapticDesign.tex
@@ -1,15 +1,15 @@
 \chapter{Haptic Design}
-This chapter briefly touches on the field of haptics \ref{hintro} and delves into considerations impacting design \ref{hapticConsiderations}. This leads to a discussion of the requirements \ref{designReq}, initial prototypes \ref{initProto}, and overall challenges overcome which led to the development of the final prototype, the vibrotactile array \ref{vibroProto}.
+This chapter briefly touches on the field of haptics \ref{hintro} and delves into considerations impacting design \ref{hapticConsiderations}. This leads to a discussion of the requirements \ref{designReq}, initial prototypes \ref{initProto}, and overall challenges which were overcome that led to the development of the final prototype, the vibrotactile array \ref{vibroProto}.
 
 \section{Brief introduction to haptics} \label{hintro}
 \textbf{Haptics} are the field of research which concern the sense of touch as it applies to \textit{kinesthetic} and \textit{tactile} sensation. The tactile sense enables humans to perceive object properties through skin contact while the \textit{kinesthetic} or \textit{proprioceptive} sense lets one perceive the positions, movements, and forces on one's own body. 
 
 The skin is lined with an array of sensory receptors which respond to mechanical pressure and distortions such as skin deformation. The \textit{lamellated} or \textit{pacinian corpuscles} (PC) are responsible for sensitivity to vibration and pressure. These rapidly adapting receptors are responsible for vibrotactile perception in glabrous skin. 
 
-Sensitivity to a tactile stimulus grows with the area in contact with the skin and also improves with the stimulus duration until it reaches a point of saturation. When pressure is continuous an effect called \textit{haptic masking} (also known as the \textit{summation effect}) is possible. The overstimulation of the \textit{pacinian corpuscles} causes the brain to ignore these messages with a mechanical filtering system which renders the stimuli to noise in order to focus on other important happenings. If this was not the case, a person could for example feel the pressure exerted by wearing clothing \cite{choi2013vibrotactile}. This phenomena is important to consider when dealing with haptic placement. As mentioned in \ref{tactileModality}, when the vibrotactiles were placed over a larger area span haptic masking was avoided and the results closely matched the auditory modality.
+Sensitivity to a tactile stimulus grows with the area in contact with the skin and also improves with the stimulus duration until it reaches a point of saturation. When pressure is continuous an effect called \textit{haptic masking} (also known as the \textit{summation effect}) is possible. The overstimulation of the \textit{pacinian corpuscles} causes the brain to ignore these messages with a mechanical filtering system which renders the stimuli to noise in order to focus on other important happenings. If this was not the case, a person could for example feel the pressure exerted by wearing clothing \cite{choi2013vibrotactile}. This phenomena is important to consider when dealing with haptic placement. As mentioned in \ref{tactileModality}, when the vibrotactiles were placed over a larger area haptic masking was avoided and the results closely matched the auditory modality.
 
 \subsection{Haptic Considerations} \label{hapticConsiderations}
-The following questions arise based on extensive research done by Choi and Kuchenbecker \cite{choi2013vibrotactile} and are crucial concepts underpinning the creation a meaningful haptic.
+The following questions arise based on extensive research done by Choi and Kuchenbecker \cite{choi2013vibrotactile} and are crucial concepts underpinning the creation a meaningful haptic:
 \begin{enumerate}
     \item \emph{Can the user feel it?}
 Perceptibility of vibrotactile stimuli is strongly dependent on the frequency of vibration. The minimum threshold is observed to be between 150-300Hz and can cover an area smaller than 0.1 micrometer. The absolute thresholds are dependent on factors such as body site, contact area, stimulus duration, stimulus waveform, contact force, skin temperature, presence of other masking stimuli, and age.
@@ -25,10 +25,10 @@ Research into experimental psychology has deemed a 20-30\% difference in amplitu
     \includegraphics[width=\linewidth,height=\textheight,keepaspectratio]{Steven's_Power_Law}
     \label{fig:StevensPowerLaw}
 \end{figure}
-When a stimulus intensity \textit{I} is above its absolute threshold, humans perceives its magnitude as \begin{math}\Psi(I)\end{math}(perceptual strength). The exponent (dependent on stimulation freq) determines growth rate of the perceived magnitude, ranges from 0.35 to 0.86 for vibrotactiles. Perceived intensity is a function of freq and amplitude of vibration (also affecting perceived pitch).
+When a stimulus intensity \textit{I} is above its absolute threshold, humans perceive its magnitude as \begin{math}\Psi(I)\end{math}(perceptual strength). The exponent (dependent on stimulation freq) determines the growth rate of the perceived magnitude and ranges from 0.35 to 0.86 for vibrotactiles. Perceived intensity is a function of frequency and amplitude of vibration (also affecting perceived pitch).
     \item \emph{How good are users at judging timing of vibrotactile cues?}
 Tactile perception is generally considered to have high temporal acuity.
-Vibrotactile temporal resolution research cites a humans ability to distinguish successive pulses with a time gap as small as 5 ms (12000 BPM). This resolution is better than vision (25ms) but slightly worse than physiological experiments into the peripheral auditory system which cites a theoretical best case scenario of approximately 2 ms \cite{fishbach2001auditory} \cite{parsons2006neurobiology}. Keep in mind that these are temporal resolutions measured with brain scans and do not necessary translate into the limits of sensorimotor response, which according to prior research indicates a more realistic resolution of approximately 50ms.
+Vibrotactile temporal resolution research cites a human's ability to distinguish successive pulses with a time gap as small as 5 ms (12000 BPM). This resolution is better than vision (25ms) but slightly worse than physiological experiments into the peripheral auditory system which cites a theoretical best case scenario of approximately 2 ms \cite{fishbach2001auditory} \cite{parsons2006neurobiology}. Keep in mind that these are temporal resolutions measured with brain scans and do not necessary translate into the limits of sensorimotor response, which, according to prior research, indicates a more realistic resolution of approximately 50ms.
     \item \emph{Can Vibrotactile cues elicit any other perceptual effects?} Below 3 Hz is considered slow kinesthetic motion. Between 10-70Hz is the sensation of rough motion or fluttering and between 100-300Hz is the sensation of smooth vibration. Subjective quality of a vibrotactile stimulus can be controlled by modifying the envelope of the stimulus amplitude.
 \end{enumerate}
 
@@ -38,12 +38,12 @@ The exploration of touch actuation led to the evaluation of available vibrotacti
 \subsubsection{Vibrotactile Constraints}
 \begin{enumerate}
     \item Create consistent mechanical coupling between actuator vibrations and users skin
-    \item Slight changes to such a system drastically affect users ability to feel and comprehend the rendered signals.
+    \item Slight changes to such a system drastically affect a users ability to feel and comprehend the rendered signals.
     \item For fixed actuator size/activation level, magnitude of created vibrations is inversely proportional to the mass of the object.
-    \item High bandwidth accelerometer can be used to measure vibration output performance. \cite{ignoto2017development}
+    \item High bandwidth accelerometer can be used to measure vibration output performance \cite{ignoto2017development}.
     \item When the application involves a large object, a wearable device, and/or multiple stimulation sites, the optimal vibrotactile rendering paradigm is to vibrate one or more small zones. 
     \begin{itemize}
-    \item In a tactile display application the localization accuracy of 250-Hz vibrotactile stimuli around the waist was 74\% with 12 equidistant tactile actuators (tactors), 92\% with eight tactors, and 97\% with six tactors.\cite{choi2013vibrotactile}	
+    \item In a tactile display application the localization accuracy of 250-Hz vibrotactile stimuli around the waist was 74\% with 12 equidistant tactile actuators (tactors), 92\% with eight tactors, and 97\% with six tactors \cite{choi2013vibrotactile}.
     \end{itemize}
 \end{enumerate}
 
@@ -51,7 +51,7 @@ The exploration of touch actuation led to the evaluation of available vibrotacti
 
 The initial requirement set forth by Professor Neely in the Haptic Enviro-Sensing Metronome (HESM) design draft is centered around an analogue wave that could squeeze and release. As the analogue wave approaches its crest it provides insight forecasting the approaching \textit{crusis}, allowing the user to prepare for and rebound from the "click-moment" with rich entrainment. 
 
-This observation is in direct parallel to external vibrotactile metronome research as discussed in \ref{vibrotactileMetronome}. The constraint was such that the pulses should feel continuous and not discrete, even mentioning a pendulum motion as the descriptive feeling to convey. 
+This observation is in direct parallel to external vibrotactile metronome research as discussed in \ref{vibrotactileMetronome}. The constraint was such that the pulses should feel continuous and not discrete in order to capture the essence of pendulum motion.
 
 As the intention is to encourage entrainment of the human body to external forces, the frequencies
 required are quite low, based on the tempi of slow walking to running gaits
@@ -95,7 +95,7 @@ The base of an N-channel MOSFET was connected through a 1K resistor to a digital
 Due to the linear relationship between current draw and pull force, the solenoid required high current and significant voltage thus isolation from the microcontroller was ideal. The necessary rigidity of the band was a cause of discomfort and the lack of positioning options was a detriment to musicians who relied on availability of their hand. Additionally, heat dissipation was at times unsafe and unbearable since the chasis was in direct contact with the skin. Though it captured the tension and release sensation well, there seemed to be a lack of clarity with regards to communication of whether each push pull iteration was a beat length or if a single contraction was the downbeat (i.e. eighth note pulse rather than quarter note). Coupled with the bulky nature of the solenoid chasis, high power requirements and excessive heat dissipation, the solenoid prototype was quickly abandoned.
 \subsection{Single vibrotactile}
 
-The subsequent prototype iteration was the first involving a vibrotactile motor. Since the goal was to run everything off of a single board, the voltage constraint was limited to the 5V maximum per \textit{Adafruit Pro Trinket} spec. An ERM motor was chosen for its working voltage range of 2-5V and minimal coin cell form factor (10mm diameter). Like the solenoid, higher applied voltage yield more current draw but stronger vibration. At 5V, a single motor draws 100mA. The specification was 1100 at 5V which roughly translates to 183Hz. Though not quite at the ideal 250Hz range optimal for skin sensitivity, this was deemed close enough.
+The subsequent prototype iteration was the first involving a vibrotactile motor. Since the goal was to run everything off of a single board, the voltage constraint was limited to the 5V maximum per \textit{Adafruit Pro Trinket} spec. An ERM motor was chosen for its working voltage range of 2-5V and minimal coin cell form factor (10mm diameter). Like the solenoid, higher applied voltage yielded more current draw but stronger vibration. At 5V, a single motor draws 100mA. The specification was 1100 at 5V which roughly translates to 183Hz. Though not quite at the ideal 250Hz range optimal for skin sensitivity, this was deemed close enough.
 
 To realize the spectrum of capability for vibrotactile sensation (beyond pulse width modulation of the signal) a haptic motor controller with a pre-installed library of effects was acquired. 
 
@@ -111,7 +111,7 @@ The goal of this design was to test the ERM sensation on a portable wearable. Th
 \end{enumerate}
 \subsubsection{Assembly}
     First, the ERM leads were soldered to the DRV2605 haptic motor controller and connected via I2C protocol to the complimentary pins on the Flora (SCL,SDA).
-    To experiment with triggering the vibrotactile wirelesssly, the bluetooth low energy module (BLE) was added and the send and receive (Tx/Rx) pins were connected as referenced in Figure \ref{fig:Proto2}. The battery was connected via the built-in terminal clip and last the entire prototype was fitted into the space of a sports wristband with the vibrotactile on the inside touching the skin.
+    To experiment with triggering the vibrotactile wirelesssly, the bluetooth low energy (BLE) module was added and the send and receive (Tx/Rx) pins were connected as referenced in Figure \ref{fig:Proto2}. The battery was connected via the built-in terminal clip and last the entire prototype was fitted into the space of a sports wristband with the vibrotactile on the inside touching the skin.
 
     \begin{figure}[H]
         \includegraphics[width=\linewidth,height=\textheight,keepaspectratio]{Proto2_bb}
@@ -126,7 +126,7 @@ The goal of this design was to test the ERM sensation on a portable wearable. Th
         \item 71 - Transition Ramp Down Long Smooth 2 - 100\% to 0
     \end{itemize}
 
-    Within the Arduino IDE the Bluefruit library and dependencies were imported and the bluetooth low energy connection configured via UART. On the client side, the connectivity was validated via the publicly available Bluefruit application on an external Android device. The app would sent integer values representing the desired BPM to the connected haptic wearable. The code was written such upon setup and BT pairing, the main loop was polling for packets. Once received in the buffer, the new bpm value was parsed into a period value in milliseconds via equation \ref{eq:period}
+    Within the Arduino IDE the Bluefruit library and dependencies were imported and the bluetooth low energy connection configured via UART. On the client side, the connectivity was validated via the publicly available Bluefruit application on an external Android device. The app would send integer values representing the desired BPM to the connected haptic wearable. The code was written such that upon setup and BT pairing, the main loop was polling for packets. Once received in the buffer, the new bpm value was parsed into a period value in milliseconds via equation \ref{eq:period}
 
     \begin{equation}
         \label{eq:period}
@@ -136,7 +136,7 @@ The goal of this design was to test the ERM sensation on a portable wearable. Th
     Since the highest operational bpm specified was 180, the shortest period would be an interval of 333.33 ms. This value divided in half gave the maximum allowed ramp up time for the motor, approximately 150ms. The new period value was fed into a state machine which set the on and off state of the motor based on a timer from half the calculated period as well as the 150ms off state.
 
     \subsubsection{Outcome}
-    The singular ERM prototype granted key insight into the capability of a vibrotactile to create the desired awareness and fill the interstitial space; though it was found to be lacking the ability to fully command the wearers attention. This was primarily due to the fact that it was driven by a 3.3V board which inhibited the vibrational strength. The next iteration needed to operate at higher voltage to get a stronger vibration. It was also deemed necessary to increase the number of vibrotactiles to work in an array format in complete synchronicity to explicitly communicate the necessary ramp down and up sensation. 
+    The singular ERM prototype granted key insight into the capability of a vibrotactile to create the desired awareness and fill the interstitial space; though it was found to be lacking the ability to fully command the wearer's attention. This was primarily due to the fact that it was driven by a 3.3V board which inhibited the vibrational strength. The next iteration needed to operate at higher voltage to get a stronger vibration. It was also deemed necessary to increase the number of vibrotactiles to work in an array format in complete synchronicity to explicitly communicate the necessary ramp down and up sensation. 
     
     Though the haptic motor controller was a critical evaluation tool for selecting the vibration effect, it was crucial for the final prototype to be able to turn on the motors at full voltage as quick as possible in order to minimize ramp up time. Chaining the motors would also optimize ramp up time in allowing a motor the time to fully spin back down while the adjacent was spinning up.
 
@@ -145,7 +145,7 @@ The goal of this design was to test the ERM sensation on a portable wearable. Th
 \section{Vibrotactile Haptic Array} \label{vibroProto}
 The final prototype was an array of four vibrotactiles. Several hardware advancements were implemented in order to solve design challenges. The overall process is detailed below.
 \subsection{Hardware}
-The main board was reverted back to that used in the solenoid prototype, the 5V 16MHz \textit{Adafruit Pro Trinket}, in order to provide maximum possible voltage to the motors. This board did not have build in serial communication so an FTDI to USB cable was necessary in order to communicate with the device. Bluetooth connectivity was abandoned to concentrate focus on minimized latency. 
+The main board was reverted back to that used in the solenoid prototype, the 5V 16MHz \textit{Adafruit Pro Trinket}, in order to provide maximum possible voltage to the motors. This board did not have built in serial communication so an FTDI to USB cable was necessary in order to communicate with the device. Bluetooth connectivity was abandoned to concentrate focus on minimized latency. 
 \subsubsection{Parts List}
 \begin{table}[H]
     \centering
@@ -198,7 +198,7 @@ The voltage across the rails (Vcc and ground) was viewed on a Rohde \& Schwarz R
     \caption{V drop across Vcc and HF ringing: Pre-cap}
     \label{fig:precaps}
 \end{figure}
-
+\subsection{Improvements}
 Capacitors were added to act as buffers from the power source to the motors, in doing so they helped provide immediate current to the motors when the PWM input signal engaged the transistor and the motor would go from an off state to an immediate on state drawing high amounts of current. Large electrolytic capacitors are known for their ability to supply high currents for a few milliseconds, more so than a battery or in the haptic wearables case, USB power. These were added across Vcc and ground nearest to the Trinket as well as across each of the node rails nearest to the motors. The change in output shape can be analyzed in Fig \ref{fig:postcaps}.
 
 \begin{figure}[H]
@@ -215,6 +215,23 @@ As an additional manual tap tempo option for the user to experiment with, a push
     {FinalProto_schem}
     \caption{Final prototype abstracted schematic}
     \label{fig:FinalProtoSchem}
+\end{figure}
+
+\subsubsection{Motor Characterization}
+In order to determine an accurate baseline for motor ramp up, a singular motor was firmly attached to a piezoelectric transducer. The remaining motors were connected to the digital bus of the scope for timing analysis. 
+\begin{figure}[H]
+    \includegraphics[width=\textwidth,height=\textheight,keepaspectratio]
+    {motorramp}
+    \caption{Motor ramp up time}
+    \label{fig:MotorRampUp}
+\end{figure}
+
+As seen in Fig \ref{fig:MotorRampUp}, the motors reach full amplitude over approximately 67ms before the signal goes low and starts to decay. The AC shape of the waveform is due to the nature of the ERM. The rotating mass translates left and right movement into a voltage oscillating in amplitude. Multiple ramp up times were averaged using this method such that the time before perceptibility was determined to be about a quarter of the ramp up time (approximately $50ms$), in agreement with \ref{HD}. This is clearly shown in Fig \ref{fig:MotorRampUp2} below.
+\begin{figure}[H]
+    \includegraphics[width=\textwidth,height=\textheight,keepaspectratio]
+    {motorramp2}
+    \caption{$50ms$ motor ramp up time to perceptibility}
+    \label{fig:MotorRampUp2}
 \end{figure}
 
 \subsection{Software}
