--- a/Thesis/thesis-introduction.tex
+++ b/Thesis/thesis-introduction.tex
@@ -14,12 +14,12 @@ The project presents a unique opportunity to enable expansion of the existing se
 \section{Motivation}
 While it is clear that nearly every professional musician has honed technique over countless hours of practice to an audible metronome, it is not directly obvious whether they have ingrained a true sense of rhythm at the foundational level with the primary instrument of expression, the body itself.
 
-Intrinsic awareness to subtle nuances of tempo remains a subject commonly unexposed to a student in training. Yet this ability, to perform in the spaces surrounding the beat, defines the difference between a rigid performance and one that flows with an elasticity and musical expression.
+Intrinsic awareness to subtle nuances of tempo remains a subject commonly unexposed to a student in training. Yet this ability, to perform in the spaces surrounding the beat, defines the difference between a rigid performance and one that flows with elasticity and musical expression.
 
 Is there missing information from the daily practice of a trained musician to an audible metronome? In a traditional sense, the audible click of Maelzel's metronome minimizes the interstitial space with an instantaneous (or discrete) impulse signal. However, the pendulum motion exhibited also seeks to convey meaningful rhythmic information with the space it occupies in the visual modality, much like the gestural motion of a conductor. Although an excellent tool in establishing a sense of musical time and precision, the danger in use of such a mechanical object lies within the mathematical exactitude according to American composer and music critic Daniel Gregory Mason. Therefore manifesting a lifelessness where instead a living and breathing musical entity should exist with its own ``ebb and flow of rhythmical energy.''\cite{fitts2008new}
 
 \section{Background}
-Humans have an innate ability to not only notice periodic movement, but to mimic and adapt to changes in their environment \cite{clayton2005time}. The extent of these capacities can be expanded through training which consists of recognizing, retaining, analyzing, and reproducing rhythms \cite{holland2010feeling}. The results of which can hold extra-musical impact as rhythmic stability finds important applications into everyday life.
+Humans have an innate ability to not only notice periodic movement, but to mimic and adapt to changes in their environment \cite{clayton2005time}. The extent of these capacities can be expanded through training which consists of recognizing, retaining, analyzing, and reproducing rhythms \cite{holland2010feeling}. The results of which can hold extra-musical impact as rhythmic stability finds important applications in everyday life.
 
 The practice of Dalcroze Eurythmics has sought to fill this knowledge gap as a curriculum developed by composer and educator Emile Jaques-Dalcroze in the early 1900's to integrate natural musical expression via movement \cite{jaques1930eurhythmics}. Through a series of exercises the instructor ushers his students to coordinate movement to varying levels of rhythmic push and pull. A student's hands might, for example, be conducting a subdivision heard in the melody while simultaneously walking in coordination to the fundamental pulse played in the harmony. A sense of constant forward motion pervades the actions of the student allowing an embodiment of continuity which seeks to permeate all elements of musicality development.
 
@@ -67,12 +67,12 @@ SMS research has given key insight to the expectations which inform the data ana
 \subsubsection{Variability}
 The variability $(SD_{asy})$ is generally lower in professional musicians than non-musicians (no prior musical exposure). In an isochronous test with IOI of 500ms, surprisingly no difference in $(SD_{asy})$ was found between amateurs and non-musicians \ref{repp2013sensorimotor}. From this study it is safe to assume the data analysis of this work will be grouped into professionals vs. (non-musicians and amateurs).
 
-Percussionists and pianists had the lowest ITI of all musicians. This might imply that a high level of rhythmic expertise reduces variability of tapping, but due to the percussive nature of the instrument becomes hard to determine. Furthermore, as the duration of the IOI increases, or slower beats per minute, $(SD_{asy})$ increased in a non linear fashion. 
+Percussionists and pianists had the lowest ITI of all musicians. This might imply that a high level of rhythmic expertise reduces variability of tapping, but due to the percussive nature of the instrument becomes hard to determine. Furthermore, as the duration of the IOI increases, $(SD_{asy})$ increased in a non linear fashion. 
 
 When professionals migrated away from the tap test and instead used their native instruments, the results were greatly improved. It was reported by Stoklasa, Liebermann, and Fischinger in a paper presented at the Music Perception and Cognition in 2012 that musicians playing their own brass or string instrument in synchrony with a metronome showed a negligible NMA ($–2 ms$), unlike their tapping results ($-13 ms$) \cite{repp2013sensorimotor}.
 
 \subsubsection{Negative Mean Asynchrony}
-The NMA is typically smaller for musicians and remains relatively constant throughout a changing IOI. A linear increase in NMA as the IOI increases can be expected from non-musicians \cite{repp2013sensorimotor}. As opposed to steady or isochronous patterns, it was found that nonisochronous tapping introduces distortions within the ITI; affecting local asynchronies but leaving keeping the global NMA persistant ~\cite{polak2016both}.
+The NMA is typically smaller for musicians and remains relatively constant throughout a changing IOI. A linear increase in NMA as the IOI increases can be expected from non-musicians \cite{repp2013sensorimotor}. As opposed to steady or isochronous patterns, it was found that nonisochronous tapping introduces distortions within the ITI; affecting local asynchronies but the global NMA remained persistant \cite{polak2016both}.
  
 As a counter to the proposed hypothesis, Bialunkska et al. argued that the reason for a negative mean asynchrony was due to faster sensory accumulation from the auditory and visual modalities than from tactile feedback received from taps. The expectation was thus a dependence of the sensory accumulation rate to the stimulus intensity. This was later found to be uncorrelated \cite{bialunska2011increasing}.
 
